--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 DIVERA_Events/Client/obj/
+DIVERA_Events/.vs/
+DIVERA_Events/Client/bin/Debug/netstandard2.1/Client.deps.json
+DIVERA_Events/DIVERA_Events/bin/
